--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="Gaming1.css.css">
+    <link rel="stylesheet" href="Gaming1.css">
 </head>
 <body>
     <!-- Navigation Section -->
